# gosdk

./: .gitignore  .golangci.yml  GitVersion.yml  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  build.go  build.yml  doc.md  generate_mocks.sh  go.mod  go.sum  play.go  sdkversion.go
.github/: CODEOWNERS
Encrypted/: test.txt
_sdkver/: ethwallet.go  proxy.go  proxy_min.go  sdkver  sdkver.go  tinygo.go  wallet.go  zboxsdk.go  zboxsdk_min.go
_util/: build_darwin.mk  build_linux.mk  build_mobile.mk  herumi.mk  herumi_darwin.mk  herumi_linux.mk  printer.mk
bls/: bls.go  plan.md
clients/: client.go
constants/: README.md  context_key.go  err.go  errors.go  files.go  signscheme.go
core/: README.md  build.go
core/imageutil/image_rs/: Cargo.toml  build.sh  image.rs  image_rs.wasm
core/imageutil/image_rs/pkg/: image_rs.d.ts  image_rs.js  image_rs_bg.wasm  image_rs_bg.wasm.d.ts  package.json
dev/: README.md  server.go
docs/: README.md
encryption/: encryption_test.go  keys.go
errors/: errors.go  go.mod
logger/: logger.go
miracl/: ARCH.go  BIG.go  BLS.go  CONFIG_BIG.go  CONFIG_CURVE.go  CONFIG_FIELD.go  DBIG.go  ECDH.go  ECP.go  ECP2.go  FP.go  FP12.go  FP2.go  FP4.go  HPKE.go  HashAndMap.go  HashAndMap_test.go  MPIN.go  PAIR.go  ROM.go
mobilesdk/: build.go
patches/: github.com-herumi-bls-gomobile_android.patch  github.com-herumi-bls-gomobile_ios.patch
samples/: 0box.go  client1.json  client2.json  client3.json
sdks/: README.md  client.go  doc.go  request.go  zbox.go
util/: client.go  client_test.go  filedir.go  filedir_test.go  (+2 more)
(+1317 files in other folders)
